# medkit

./: CHANGELOG.md  CODEBASE_INDEXER_PLAN.md  README.md  dev-build.sh  jest.config.js  package-lock.json  package.json  queries.rs  startup.sh  tsconfig.json
codebase_index/: Cargo.toml
codebase_index/src/: file_types.json  index-types.json  ingestion.rs  main.rs  queries.rs  updater.rs  utils.rs
codebase_index/src/sample/: lab00.py
codebase_index/src/sample/simple_code/: ingestion_copy.py  install.sh  test.rs  test.zig
helix-medkit/: config.hx.json  queries.hx  schema.hx
specs/: design.md  requirements.md  tasks.md
src/: cli.ts  extension.ts  index.ts
src/analyzers/: StaticAnalyzer.ts
src/analyzers/rules/: PerformanceRules.ts  SecurityRules.ts
src/core/: analyzer.ts  detector.ts  indexer.ts  parser.ts  scanner.ts  storage.ts
src/core/languages/: base-analyzer.ts  c-analyzer.ts  cpp-analyzer.ts  javascript-analyzer.ts  python-analyzer.ts  rust-analyzer.ts
src/models/: index.ts
src/services/: CodeParser.ts  PromptGenerator.ts  VulnerabilityScanner.ts
src/test/: VulnerabilityScanner.test.ts
src/types/: index.ts  tree-sitter.d.ts
src/utils/: validation.ts
webview-ui/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
webview-ui/src/: App.tsx  index.html  styles.css
webview-ui/src/components/ui/: button.tsx  input.tsx  textarea.tsx
