[package]
name = "codebase_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
serde_json = "1.0"
ignore = "0.4"
anyhow = "1.0"
tree-sitter = "0.25.6"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.24.0"
tree-sitter-zig = "1.1.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-c = "0.24.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.23.1"
chonkier = "0.0.2"
chrono = "0.4"
rayon = "1.8.0"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"
lazy_static = "1.5.0"
governor = { version = "0.6"}
indicatif = "0.18.0"
clearscreen = "4.0.2"
async-recursion = "1.1.1"
sys-info = "0.9.1"

[build-dependencies]
cc = "1.0"
